--- a/index.html
+++ b/index.html
@@ -6,20 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Noto+Sans:wght@100&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Noto+Sans:wght@100&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="/img/favicon.ico">
     <title>miclima</title>
 </head>
-<body class="font1">
+<body class="font1 body">
    <div class="container">
         <div class="areab">
             <i class="fa-solid fa-city"></i>    
             <input type="text" class="font1" id="texto" placeholder="Buscar ciudad"></input>
             <button  class="fa-sharp fa-solid fa-magnifying-glass font3"></button>
         </div>
-        <div class="nofound">
-            
+        <div class="error">
+            <img class="ima" src="404.png">
+            <p>Rayos y tormentas, tu ciudad no está.</p>
+        </div>
+        <div class="climacaja">
+            <img src="">
+            <p class="temperatura"></p>
+            <p class="detalles"></p>
+        </div>
+        <div class="cdetalles">
+            <div class="humedad">
+                <i class="fa-sharp fa-solid fa-droplet"></i>
+                <div class="texto">
+                    <span></span>
+                    <p > Humedad</p>
+                </div>
+            </div>
+            <div class="viento">
+                <i class="fa-sharp fa-solid fa-wind"></i>
+                <div class="texto">
+                    <span></span>
+                    <p >Viento</p>
+                </div>
+            </div>
         </div>
    </div>
 
