--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Noto+Sans:wght@100&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="/img/favicon.ico">
-    <title>miclima</title>
+    <title>What a weather</title>
 </head>
 <body class="font1 body">
    <div class="container">
@@ -27,6 +27,7 @@
             <img src="">
             <p class="temperatura"></p>
             <p class="detalles"></p>
+            <p class="cbuscada"></p>
         </div>
         <div class="cdetalles">
             <div class="humedad">
