--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
    <!--scripts-->
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/133ebcd262.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="alerts.js"></script>    
 <!--CARLOS EDUARDO HERNANDEZ MONTES-->
 </body>
 </html>
