--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
     <img src="">-->
 </div>
 <div class="stat">
-           <h1 class="font2">Predicción semanal</h1>
+           <h1 class="font2">información adicional</h1>
            <div class="info">
-            <h4 class="font1">Aquí irá la información semanal del clima</h4>
+            <h4 class="font1">Aquí irá la información relevante del clima</h4>
            </div>
-           <div class="mapa">
-            <img src="">
-            </div>
+           <div class="ama">
+            <img src="./img/amanecer.png">
+            <p class="dat">Amanecer</p>
+            <p class="fecha"></p>
+           </div>
+           <div class="ata">
+            <img src="./img/atardecer.png">
+            <p class="dat">Atardecer</p>
+            <p class="fecha2"></p>
+           </div>
 </div>
 
 
