--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
     <div class="stat">
         
         <h1 class="font2">información adicional</h1>
-        <div class="info">
-            <h4 class="font1">Aquí irá la información relevante del clima</h4>
-        </div>
+        
         <div class="ama">
             <img src="./img/amanecer.png">
             <p class="dat">Amanecer</p>
@@ -83,6 +81,9 @@
             <img src="./img/atardecer.png">
             <p class="dat">Atardecer</p>
             <p class="fecha2"></p>
+        </div>
+        <div class="map">
+            <img src="">
         </div>
     </div>
 
